Almost Finished
Add lombok